<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bridge_status_label"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status_label"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bridge_status_text"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bridge_not_active"
                android:textSize="14sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/log_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <TextView
                android:id="@+id/log_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:fontFamily="monospace"
                android:minHeight="160dp"
                android:padding="16dp"
                android:text="@string/log_waiting"
                android:textSize="12sp" />

        </ScrollView>

    </LinearLayout>

</FrameLayout>
